Fix some various spacing and clickability issues

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -67,6 +67,11 @@ table.semantic {
   thead th {
     vertical-align: bottom;
   }
+  td > input[type=checkbox] {
+    margin: {
+      top: 0.2em;;
+    }
+  }
   td,
   th {
     border: 0;
